fixed more alignment issues. Missing label fixed for form

--- a/contact.css
+++ b/contact.css
@@ -45,6 +45,11 @@
   margin: 10px 0 20px 10px;
 }
 
+#message-label {
+  float: left;
+  margin: 0px 40px 10px 40px;
+}
+
 #message {
   width: 83%;
   height: 100px;
@@ -90,9 +95,23 @@
   font-weight: bold;
 }
 
+#img-connect {
+  height: 350px;
+  width: auto;
+}
+
 @media (min-width: 415px) and (max-width: 768px) {
   .form-element label {
     margin: 5px;
+  }
+
+  #img-connect {
+    width: 300px;
+    height: auto;
+  }
+
+  #message-label {
+    margin: 0px 30px 10px 37px;
   }
 }
 
@@ -107,5 +126,12 @@
 
   .btn-1 {
     margin-bottom: 10px;
+  }
+  #img-connect {
+    width: 300px;
+    height: auto;
+  }
+  #message-label {
+    margin: 0px 10px 10px 20px;
   }
 }
